--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - type: bind
         source: ./benchmarks
         target: /home/benchmarks
-        read_only: true
+        read_only: false
 
       - type: bind
         source: ./include
